--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ body{
 
 /*mobile*/
 
-@media screen and (max-width: 768px) and (min-width: 320px){
+@media screen and (max-width: 800px) and (min-width: 320px){
 
 	.container-cabecalho-divisao {
 		width: 85%;	
@@ -341,6 +341,9 @@ body{
     .contato-form-final .contato-form-legend{
         text-align: center;
     }
+    .contato-form-final{
+        margin-top: 20px;
+    }
     .container-link-cabecalho-app{
         order: -1;
     }
@@ -369,5 +372,8 @@ body{
     }
     .lista-imagens-final:nth-last-child(1n){
         margin-left: 10px;
+    }
+    .botao-vantagens:hover{
+        transform: none;
     }
 }
